{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "4e2d9b1f-20d2-439f-9294-f9931d911524",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "14cfa329-e875-4345-a488-603e77561409",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "08f5cc22-f7dd-4db5-acc4-37d9ddf1b63b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8aabccfe-854f-4395-a22f-77507f1859ba",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b69efbd-d30d-49a6-8060-7deb871bb332",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}