{
    "name": "InputAction",
    "maps": [
        {
            "name": "TouchAction",
            "id": "2ab365d3-7b13-489f-9a12-68917e0a1772",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "1b11c187-f27d-446f-a43f-7d5f1af4f010",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "7f5d8453-e0cd-45f8-be48-f4af2df5eefc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67b2880d-240c-4e5f-8309-593ea4b220bc",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e25da2ef-40e3-4f62-a297-82d34f656a97",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}